2001-10-12  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (get_section_type_name): Don't print SHT_ prefix for
	LOPROC, LOOS and LOUSER.

Thu Oct 11 21:45:17 2001  J"orn Rennecke <amylaar@onetel.net.uk>

	* MAINTAINERS: Update my email address.

2001-10-03  Alan Modra  <amodra@bigpond.net.au>

	* doc/Makefile.in: Regenerate.
	* configure: Regenerate.

2001-10-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (display_debug_line, display_debug_pubnames,
	display_debug_info, display_debug_frames): Detect and warn
	about 64-bit format entries.
	(display_debug_aranges): Reword 64-bit warning.
	(debug_displays): Add .debug_pubtypes as a known, but not yet
	supported, debug section.

2001-10-02  Alan Modra  <amodra@bigpond.net.au>

	* coffdump.c (PROGRAM_VERSION): Delete.
	(main <'V'>): Call print_version.
	* srconv.c: Likewise.
	* sysdump.c: Likewise.
	* version.c (program_version): Remove.
	(print_version): Use BFD_VERSION_STRING.  Just print the current
	year in copyright message.
	* addr2line.c (program_version): Remove unused declaration.
	* objdump.c (display_target_tables): Use BFD_VERSION_STRING in
	place of BFD_VERSION.
	* Makefile.am (Makefile): Depend on bfd/configure.in.
	(cplus-dem.o): Depend on Makefile.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2001-10-01  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (display_debug_aranges): Detect and warn about DWARF64
	format .debug_arange sections.
	(main): Add missing prototype.
	
2001-09-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* Makefile.am: Update dependencies with "make dep-am".
	* Makefile.in: Regenerate.

2001-09-28  Richard Henderson  <rth@redhat.com>

	* objdump.c (dump_section_header): Dump SEC_ARCH_BIT_0.

2001-09-26  Alan Modra  <amodra@bigpond.net.au>

	* bucomm.c (fatal): Define using VPARAMS, VA_OPEN, VA_FIXEDARG,
	VA_CLOSE.
	(non_fatal): Likewise.
	* objdump.c (objdump_sprintf): Likewise.
	* readelf.c (error): Likewise.
	(warn): Likewise.
